crates/wdl-engine/tests/workflows/enum-unknown-choice/error.txt
error: unknown choice named `InvalidVariant` for enum `Status`
   ┌─ tests/workflows/enum-unknown-choice/source.wdl:10:23
   │
10 │     Status s = Status.InvalidVariant
   │                       ^^^^^^^^^^^^^^ the choice is referenced here

